--- a/_posts/2014-07-05-zabbix邮件报警设置.md
+++ b/_posts/2014-07-05-zabbix邮件报警设置.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "zabbix邮件报警设置"
 date:   2014-07-04 10:46:33
-categories: zabbix 
+categories: zabbix python
 ---
 
 You'll find this post in your `_posts` directory - edit this post and re-build (or run with the `-w` switch) to see your changes!
